# operator

./: .gitignore  deploy.sh  package-lock.json  package.json
brain-check/: index.html  package-lock.json  package.json  vite.config.ts
brain-check/src/: App.tsx  constants.ts  index.css  main.tsx  store.ts  types.ts
docs/: APP_ANALYSIS_AND_IMPROVEMENTS.md
public/: sw.js
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/actions/: analytics.ts  bank-import.ts  banking.ts  calendar-feed.ts  calendar.ts  external-calendar.ts  finance.ts  fundamentals.ts  insights.ts  knowledge.ts  notifications.ts  outbound.ts  pinned-notes.ts  pipeline.ts  planner.ts  recurring.ts  review.ts  score.ts  settings.ts  slack.ts  sprints.ts  staff.ts  tasks.ts  today.ts
src/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx
src/hooks/: useAnimateOnMount.ts  useUndoStack.ts
src/lib/: bank-categories.ts  constants.ts  gocardless.ts  integrations.ts
src/providers/: SidebarProvider.tsx  SupabaseProvider.tsx  ThemeProvider.tsx
supabase/migrations/: 00001_create_all_tables.sql  00002_add_recurring_tasks.sql  00003_custom_fundamentals_task_weights_recurring_times.sql  00004_sprints_and_today_tasks.sql  00005_rename_task_weights.sql  00006_savings_goals_and_snapshot_updates.sql  00007_recurring_task_client_and_weight.sql  00008_urgent_flag_and_scheduling.sql  00009_drop_time_block_check.sql  00010_client_monthly_overrides.sql  00013_mlu_capacity.sql  (+16 more)
(+154 files in other folders)
