[package]
name = "operator-os"
version = "1.0.0"
description = "Personal command centre for focused founders"
authors = ["you"]
edition = "2021"

[lib]
name = "operator_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
